--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Aravind K V</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/assests/images/myimg.png">
   <!-- linking css file -->
   <link rel="stylesheet" href="style.css">
   <!-- bootstrap CDN -->
@@ -54,8 +55,9 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hallo, I am Aravind</h2>
+                <h2 class="hero_title">Hello, I am Aravind</h2>
                 <p class="hero_desc">
+                    
                     I am a DevOps newbie seeking for an opportunity to develop my skill
                 </p>
             </div>
@@ -95,8 +97,8 @@
                         </div> -->
                     </div>
                     <p> 
-                        I am pursuing my Computer Science Engineering at B S Abdur Rahman Crescent Institute of Science and Technology.
-                        I am currently in the 6th semester with good grades. I am passionate about DevOps and Cloud.  
+                        I am pursuing my Computer Science and Engineering from B S Abdur Rahman Crescent Institute of Science and Technology.
+                        I am currently in the 7th semester. I am passionate about DevOps and Cloud.  
                     </p>
                     <div class="row mt-3">
                         <p> 
