contact section changed

--- a/index.html
+++ b/index.html
@@ -187,27 +187,21 @@
 
 
       <!-- Footer  -->
-       
-    <footer id="footer">
-        <h2 class="projects-title" id="contact">Contact</h2>
-        <div class="container-fluid">
-            <!-- social media icons -->
-            <div class="social-icons mt-4 ">
-                <a href="https://www.linkedin.com/in/aravindkv27/" target="_blank">
-                    <img src="assests/icons/Social/linkedin-brands.svg" class="icon_foot icon-card_foot"/>
-                </a>
-                <a href="https://github.com/aravindkv27/" target="_blank">
-                    <img src="assests/icons/Social/github-brands.svg" class="icon_foot icon-card_foot"/>
-                </a>
-                <a href="https://medium.com/@aravind27032002" target="_blank">
-                    <img src="assests/icons/Social/medium-brands.svg" class="icon_foot icon-card_foot"/>
-                </a>
-                <a href="https://twitter.com/_aravind27_" target="_blank">
-                    <img src="assests/icons/Social/twitter-brands.svg" class="icon_foot icon-card_foot"/>
-                </a>
-            </div>
-        </div>
-    </footer>
+  <section   id="contact">
+      <div class="section fp-auto-height">
+        <div class="footer">
+          <p>Connect WIth Me</p>
+          <div class="social-links">
+            <span><a href="https://www.linkedin.com/in/aravindkv27" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
+            <span><a target="_blank" href="https://twitter.com/_aravind27_" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></span>
+            <span><a href="https://github.com/aravindkv27" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
+            <span><a href="https://medium.com/@aravindkv27" target="_blank"><i class="fab fa-medium fa-2x"></i></a></span>
+            <!-- <span><a href="https://codepen.io/SquishyAndroid/pens/public/"><i class="fa fa-codepen fa-2x"></i></a></span> -->
+         </div>
+       </div>
+     </div>
+</section>
+
       <script src="script/script.js"></script>
 </body>
 </html>
