--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- <script src="script/script.js"></script> -->
 </head>
 
-<body>
+<body style="background-color: #1a1b18; color: #f0f0ef;">
     <!-- load javascript after loading all html content -->
     
 
@@ -77,16 +77,16 @@
                 <div class="col-lg-8">
 
                     <div class="row mt-3">
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
                             <ul>
                                 <li>Name: Aravind K V</li>
-                                <li>Age: 20</li>
-                                <li>Occupation: Student</li>
+                                <li>Age: 21</li>
+                                <li>Occupation: Full Stack Techno Functional Intern- Kaar Tech</li>
                                 <li>DOB : 27/03/2002</li>
                                 <li>Hobbies: Playing Games and Listening Songs</li>
                                 <li>Languages Known: Tamil and English</li>
                             </ul>
-                        </div>
+                        </div> -->
                         <!-- <div class="col-md-6">
                             <ul>
                                 <li>DOB : 27/03/2002</li>
@@ -97,14 +97,21 @@
                         </div> -->
                     </div>
                     <p> 
-                        I am pursuing my Computer Science and Engineering from B S Abdur Rahman Crescent Institute of Science and Technology.
-                        I am currently in the 7th semester. I am passionate about DevOps and Cloud.  
+                      My name is Aravind K V, and I'm 21 years old. I am a 2023 graduate in Computer Science & Engineering (B.Tech CSE) with a passion for technology, particularly in Cloud Computing and DevOps. Currently, I am working as a Full Stack Techno Functional Intern at Kaar Tech,
+                       where I am gaining practical experience in SAP, Angular, Nodejs, and Postman. My date of birth is 27th March 2002.
+                    </p>
+                    <p>
+                      In addition to my professional pursuits, I have a variety of hobbies that keep me engaged. I enjoy playing games, watching animes and listening to songs during my free time. 
+                      As I look ahead, I am eager to pursue a career in the Cloud and DevOps domain.
                     </p>
                     <div class="row mt-3">
                         <p> 
-                            I want to pursue my career in the Cloud and DevOps and be interested in robotics. I love to watch series and play games.
+                          I am driven by my passion for technology, and I am determined to make a positive impact in the ever-evolving tech industry.
                         </p>
                     </div>
+                    <a href="https://drive.google.com/file/d/15Nw8Vwt_u7QQxwrfxfcXxZDSwe5TTall/view?usp=sharing">
+                    <button>Resume</button>
+                  </a>
                 </div>
             </div>
     </section>
